fixed spacing issues

--- a/less/index.less
+++ b/less/index.less
@@ -57,7 +57,7 @@ table {
 
 html, body {
 	height: 100%;
-	margin: 3% 10%;
+	margin: 2% 8%;
 	background-color: @primary-color;
 
 
@@ -85,10 +85,8 @@ img {
 
 section {
 	color: black;
-	display: flex;
-	justify-content: space-around;
 	width: 80%;
-	margin: 5%;
+	margin: 8%;
 	text-align: center;
 
 }
